--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
  </div>
 
 
- <div class="partners" id="mitra">
+ <div class="partners" id="mitra" data-aos="fade-left">
     <div class="container">
         <div class="partners-box">
             <h1>Puskesmas
